Recorded error, but unable to add jupyternotebook because still running

--- a/PA4.ipynb
+++ b/PA4.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "training = pa4.loadData('pa4train.txt')\n",
-    "testing = pa4.loadData('pa4test.txt')"
+    "Loading Data in"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training = pa4.loadData('data/pa4train.txt')\n",
+    "testing = pa4.loadData('data/pa4test.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parse them into DataFrames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,43 +70,104 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "p = pa4.Perceptron()"
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Disclaimer: only train if there is something wrong with original algorithm. Training takes very long  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save each p in **saved/delta_idx_.csv** to avoid long training time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pa4.generate_map(\"sadkfalk\",3)[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Half way done\n",
+      "Half way done\n",
+      "Half way done\n"
+     ]
+    }
+   ],
    "source": [
-    "%time p.fit(training, 2)"
+    "for length in [3,4,5]:\n",
+    "    p = pa4.Perceptron()\n",
+    "    p.fit(training, length)\n",
+    "    pd.DataFrame(p.delta_idx, columns=['delta_idx']).to_csv(\"saved/delta_idx\"+ str(length) + \".csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1) Training/Testing Error for each p with k(s,t) = #occurances in s * #occurances in t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Error for (p = 3 )is: 0.013223140495867768\n",
+      "Testing Error for (p= 3 )is: 0.04221635883905013\n",
+      "Training Error for (p = 4 )is: 0.0013774104683195593\n",
+      "Testing Error for (p= 4 )is: 0.022427440633245383\n",
+      "Training Error for (p = 5 )is: 0.0002754820936639118\n",
+      "Testing Error for (p= 5 )is: 0.0633245382585752\n"
+     ]
+    }
+   ],
    "source": [
-    "pd.DataFrame(p.delta_idx, columns=['delta_idx']).to_csv(\"delta_idx.csv\")"
+    "for length in [3,4,5]:\n",
+    "    p.delta_idx = pd.read_csv(\"saved/delta_idx\"+ str(length) + \".csv\")['delta_idx'].to_list()\n",
+    "    p.p = length\n",
+    "    print(\"Training Error for (p =\", length, \")is:\", p.error(training))\n",
+    "    print(\"Testing Error for (p=\", length, \")is:\", p.error(testing))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now train with second kernel function."
    ]
   },
   {
@@ -101,7 +176,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# p.delta_idx = pd.read_csv(\"delta_idx.csv\")['delta_idx'].to_list()"
+    "for length in [3,4,5]:\n",
+    "    p2 = pa4.Perceptron()\n",
+    "    p2.fit(training, length)\n",
+    "    pd.DataFrame(p.delta_idx, columns=['delta_idx']).to_csv(\"saved2/delta_idx\"+ str(length) + \".csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2) Training/Testing Error for each p with k(s,t) = #occurances only"
    ]
   },
   {
@@ -110,15 +195,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.error(training)"
+    "for length in [3,4,5]:\n",
+    "    p.delta_idx = pd.read_csv(\"saved/delta_idx\"+ str(length) + \".csv\")['delta_idx'].to_list()\n",
+    "    p.p = length\n",
+    "    print(\"Training Error for (p =\", length, \")is:\", p.error(training))\n",
+    "    print(\"Testing Error for (p=\", length, \")is:\", p.error(testing))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -137,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
