Recorde q2's data, need q2's error

--- a/PA4.ipynb
+++ b/PA4.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -132,7 +132,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -172,14 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Half way done\n",
+      "Half way done\n",
+      "Half way done\n"
+     ]
+    }
+   ],
    "source": [
     "for length in [3,4,5]:\n",
     "    p2 = pa4.Perceptron()\n",
     "    p2.fit(training, length)\n",
-    "    pd.DataFrame(p.delta_idx, columns=['delta_idx']).to_csv(\"saved2/delta_idx\"+ str(length) + \".csv\")"
+    "    pd.DataFrame(p2.delta_idx, columns=['delta_idx']).to_csv(\"saved2/delta_idx\"+ str(length) + \".csv\")"
    ]
   },
   {
@@ -196,11 +206,18 @@
    "outputs": [],
    "source": [
     "for length in [3,4,5]:\n",
-    "    p.delta_idx = pd.read_csv(\"saved/delta_idx\"+ str(length) + \".csv\")['delta_idx'].to_list()\n",
-    "    p.p = length\n",
-    "    print(\"Training Error for (p =\", length, \")is:\", p.error(training))\n",
-    "    print(\"Testing Error for (p=\", length, \")is:\", p.error(testing))"
+    "    p2.delta_idx = pd.read_csv(\"saved2/delta_idx\"+ str(length) + \".csv\")['delta_idx'].to_list()\n",
+    "    p2.p = length\n",
+    "    print(\"Training Error for (p =\", length, \")is:\", p2.error(training))\n",
+    "    print(\"Testing Error for (p=\", length, \")is:\", p2.error(testing))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
