Done with 1 and 2

--- a/PA4.ipynb
+++ b/PA4.ipynb
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,18 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Half way done\n",
+      "All done\n",
       "Half way done\n",
-      "Half way done\n"
+      "All done\n"
      ]
     }
    ],
@@ -111,7 +119,7 @@
     "for length in [3,4,5]:\n",
     "    p = pa4.Perceptron()\n",
     "    p.fit(training, length)\n",
-    "    pd.DataFrame(p.delta_idx, columns=['delta_idx']).to_csv(\"saved/delta_idx\"+ str(length) + \".csv\")"
+    "    pd.DataFrame(p.delta, columns=['x','y']).to_csv(\"saved/delta\"+ str(length) + \".csv\")"
    ]
   },
   {
@@ -130,27 +138,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Error for (p = 3 )is: 0.013223140495867768\n",
-      "Testing Error for (p= 3 )is: 0.04221635883905013\n",
-      "Training Error for (p = 4 )is: 0.0013774104683195593\n",
-      "Testing Error for (p= 4 )is: 0.022427440633245383\n",
-      "Training Error for (p = 5 )is: 0.0002754820936639118\n",
-      "Testing Error for (p= 5 )is: 0.0633245382585752\n"
+      "Training Error for (p=3 )is: 0.011846\n",
+      "Testing Error for (p=3 )is: 0.052770\n",
+      "Training Error for (p=4 )is: 0.007163\n",
+      "Testing Error for (p=3 )is: 0.027704\n",
+      "Training Error for (p=5 )is: 0.003581\n",
+      "Testing Error for (p=5 )is: 0.030343\n"
      ]
     }
    ],
    "source": [
     "for length in [3,4,5]:\n",
-    "    p.delta_idx = pd.read_csv(\"saved/delta_idx\"+ str(length) + \".csv\")['delta_idx'].to_list()\n",
+    "    p.delta = np.array(pd.read_csv(filepath_or_buffer=\"saved/delta\"+ str(length) + \".csv\", usecols=['x','y']))\n",
     "    p.p = length\n",
     "    print(\"Training Error for (p =\", length, \")is:\", p.error(training))\n",
     "    print(\"Testing Error for (p=\", length, \")is:\", p.error(testing))"
@@ -173,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -196,14 +206,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2) Training/Testing Error for each p with k(s,t) = #occurances only"
+    "### 2) Training/Testing Error for each p with k(s,t) = #common words only"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Error for (p=3 )is: 0.012121\n",
+      "Testing Error for (p=3 )is: 0.040897\n",
+      "Training Error for (p=4 )is: 0.006612\n",
+      "Testing Error for (p=3 )is: 0.025066\n",
+      "Training Error for (p=5 )is: 0.003581\n",
+      "Testing Error for (p=5 )is: 0.030343\n"
+     ]
+    }
+   ],
    "source": [
     "for length in [3,4,5]:\n",
     "    p2.delta_idx = pd.read_csv(\"saved2/delta_idx\"+ str(length) + \".csv\")['delta_idx'].to_list()\n",
